feat: Added image name generation interface and related function optimizations